
2018-11-22  Simon Sobisch <simonsobisch@gnu.org>

	* pplex.l, pparse.y: FR #344 Support copybook and library names
	  as text-names (not literals) with periods, always upper-cased
	  if not requested otherwise by FOLD-CALL=LOWER

2018-10-28  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c [__ORANGEC__]: adjustments of command line options

2018-10-24  Simon Sobisch <simonsobisch@gnu.org>

	* pplex.l: minor refactoring (creating ppecho_direct) and comments

2018-10-13  Edward Hart <edward.dan.hart@gmail.com>

	* field.c (create_implicit_picture): handle case where f->screen_from or
	  f->screen_to are error nodes.
	* parser.y (screen_description): prevent double free of level-number
	  field in error handling.
	* parser.y (perform_body): fixed internal error with empty PERFORM.

2018-10-12  Simon Sobisch <simonsobisch@gnu.org>

	* pplex.l: fixed TITLE being consumed as statement when actually starting
	  a user defined word

2018-10-08  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y: warn about unimplemented OPEN REVERSED / WITH NO REWIND,
	  see FR #343
	* parser.y: RM/COBOL compatibility - allow LOCK clause on
	  OPEN REVERSED / WITH NO REWIND

2018-10-02  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_validate_program_environment, cb_validate_program_data,
	  cb_validate_program_body): only use the specified parameter
	  cb_program prog instead of current_program
	* typeck.c (cb_validate_program_body): splitted cb_validate_labels()
	  and cb_resolve_debug_refs() to own functions
	* typeck.v (cb_resolve_debug_refs): added size handling for cd-names
	* parser.y (debugging_target), typeck.c (cb_resolve_debug_refs):
	  added check for duplicate reference of items in DEBUGGING procedures;
	  allow subscripts/refmod during parse to provide a clean check later

2018-09-28  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y: ACCEPT x FROM ESCAPE _key
	* parser.y, reserved.c: extended parsing for ACUCOBOL-GT
	  DISPLAY WINDOW
