@@ -1,4 +1,9 @@
 
+2018-11-25  Simon Sobisch <simonsobisch@gnu.org>
+
+	* tree.c (cb_tree_category): correct category for reference-modified
+	  NATIONAL/NATIONAL-EDITED items
+
 2018-11-22  Simon Sobisch <simonsobisch@gnu.org>
 
 	* pplex.l, pparse.y: FR #344 Support copybook and library names
@@ -12,6 +17,10 @@
 2018-10-24  Simon Sobisch <simonsobisch@gnu.org>
 
 	* pplex.l: minor refactoring (creating ppecho_direct) and comments
+
+2018-10-15  Simon Sobisch <simonsobisch@gnu.org>
+
+	* reserved.c (cb_list_registers): output "ADRESS OF" as "phrase"
 
 2018-10-13  Edward Hart <edward.dan.hart@gmail.com>
 
